# fero

./: .gitignore  Cargo.toml  README.md
src/: config.rs  editor.rs  input.rs  main.rs  state.rs  ui.rs
src/app/: controller.rs  mod.rs
src/core/: editor.rs  io.rs  mod.rs  snapshot.rs
