[package]
name = "fero"
version = "0.1.0"
edition = "2021"
authors = ["TravTheRobber <anguishedkitty@proton.me>"]
description = "a lightweight, state-driven terminal text editor designed as a stepping stone between nano and vim."
homepage = "https://github.com/travtherobber/fero"
repository = "https://github.com/travtherobber/fero"
license = "MIT"
readme = "README.md"
keywords = ["tui", "editor", "terminal", "rust", "development"]
categories = ["command-line-utilities", "development-tools::editors"]

[dependencies]
crossterm = "0.27"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
lazy_static = "1.5"
arboard = "3.4.0"